--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./assets/css/styles.css">
   <title>Frontend Mentor | Workit landing page</title>
 </head>
 <body>
+  <section class="firstSection">
+    <header>
+      <img src="./assets/images/logo-light.svg" alt="Company logo">
+      <a href="#">Apply for access</a>
+    </header>
+    <article class="hero">
+      <h1>Data <span>tailored</span> to your needs.</h1>
+      <button>Learn more</button>
+      <img src="./assets/images/image-hero.webp" alt="Cellphone image">
+    </article>
+  </section>
 
-  Apply for access
 
-  Data tailored to your needs.
-
-  Learn more
   
-  1
+  <!-- 1
 
   Actionable insights
   
@@ -43,7 +49,7 @@
   beta tester for our app and kickstart your company. Apply for access below and I’ll be 
   in touch to schedule a call.
 
-  Apply for access
+  Apply for access -->
 
 </body>
 </html>
