--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Frontend Mentor | Workit landing page</title>
 </head>
 <body>
+
   <section class="firstSection">
     <header>
       <img src="./assets/images/logo-light.svg" alt="Company logo">
@@ -20,21 +21,26 @@
     </article>
   </section>
 
+  <section class="objectives">
+    <article class="objective">
+      <span class="objective-number">1</span>
+      <h2 class="objective-title">Actionable insights</h2>
+      <p class="objective-paragraph">Optimize your products, improve customer satisfaction and stay ahead of the competition with our product data analytics.</p>
+    </article>
+    <article class="objective">
+      <span class="objective-number">2</span>
+      <h2 class="objective-title">Data-driven decisions</h2>
+      <p class="objective-paragraph">Make data-driven decisions with our product data analytics. Our AI-generated reports help you unlock insights hidden in your product data.</p>
+    </article>
+    <article class="objective">
+      <span class="objective-number">3</span>
+      <h2 class="objective-title">Always affordable</h2>
+      <p class="objective-paragraph">Always affordable pricing that scales with your business. Get top-quality product data analytics services without hidden costs or unexpected fees.</p>
+    </article>
+  </section>
 
   
   <!-- 1
-
-  Actionable insights
-  
-  Optimize your products, improve customer satisfaction and stay ahead of the competition 
-  with our product data analytics.
-
-  2
-
-  Data-driven decisions
-
-  Make data-driven decisions with our product data analytics. Our AI-generated reports help 
-  you unlock insights hidden in your product data.
 
   3
 
