css (mobile view): modify the html and css of founder section and footer and finish the mobile view

--- a/index.html
+++ b/index.html
@@ -38,24 +38,29 @@
       <p class="objective-paragraph">Always affordable pricing that scales with your business. Get top-quality product data analytics services without hidden costs or unexpected fees.</p>
     </article>
   </section>
-
-  
-  <!-- 1
-
-  3
-
-  Always affordable
-
-  Always affordable pricing that scales with your business. Get top-quality product data 
-  analytics services without hidden costs or unexpected fees.
-
-  Be the first to test
-
-  Hi, I'm Louis Graham, the founder of the company. Book a demo call with me to become a 
-  beta tester for our app and kickstart your company. Apply for access below and I’ll be 
-  in touch to schedule a call.
-
-  Apply for access -->
-
+    <section>
+      <article class="founder">
+        <img class="founder-img" src="./assets/images/image-founder.webp" alt="Founder image">
+        <div class="founder-desc">
+          <h3>Be the first to test</h3>
+          <p>
+            Hi, I'm Louis Graham, the founder of the company. Book a demo call with me to become a 
+            beta tester for our app and kickstart your company. Apply for access below and I’ll be 
+            in touch to schedule a call.
+          </p>
+        </div>
+        <button>Apply for access</button>
+      </article>
+    </section>
+    <footer>
+      <div>
+        <img src="./assets/images/logo-dark.svg" alt="Company logo">
+        <div class="footer-social">
+          <img src="./assets/images/icon-facebook.svg" alt="facebook logo">
+          <img src="./assets/images/icon-twitter.svg" alt="twitter logo">
+          <img src="./assets/images/icon-instagram.svg" alt="instagram logo">
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
